--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -117,6 +117,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Spock: zum Mocken erforderlich -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
