--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <vertx.version>3.4.2</vertx.version>
+        <vertx.version>3.5.0</vertx.version>
         <jackson.version>2.9.2</jackson.version>
         <vmp.version>1.0.9</vmp.version>
         <axon.version>3.0.6</axon.version>
@@ -24,6 +24,8 @@
         <assertj.version>3.8.0</assertj.version>
         <vertx.verticle>com.github.haschi.haushaltsbuch.infrastruktur.RestApi</vertx.verticle>
         <kotlin.version>1.1.61</kotlin.version>
+        <!--<kotlin.version>1.1.50</kotlin.version>-->
+        <serialization.version>0.2</serialization.version>
     </properties>
 
     <dependencyManagement>
@@ -98,6 +100,12 @@
                 <version>${assertj.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.jetbrains.kotlinx</groupId>
+                <artifactId>kotlinx-serialization-runtime</artifactId>
+                <version>${serialization.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -123,6 +131,10 @@
             <artifactId>vertx-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-lang-kotlin</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -248,6 +260,16 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-runtime</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>nl.jqno.equalsverifier</groupId>
+            <artifactId>equalsverifier</artifactId>
+            <version>2.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -349,7 +371,19 @@
                 </executions>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
+
+                        <compilerPlugins>
+                            <plugin>kotlinx-serialization</plugin>
+                        </compilerPlugins>
+
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlinx</groupId>
+                        <artifactId>kotlinx-maven-serialization-plugin</artifactId>
+                        <version>0.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <plugin>
@@ -375,4 +409,19 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>bintray-kotlin-kotlinx</id>
+            <name>bintray</name>
+            <url>https://dl.bintray.com/kotlin/kotlinx</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>bintray-kotlin-kotlinx</id>
+            <name>bintray</name>
+            <url>https://dl.bintray.com/kotlin/kotlinx</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
