--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -141,6 +141,11 @@
             <artifactId>vertx-rx-java2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web-client</artifactId>
+        </dependency>
+
         <!--<dependency>-->
         <!--<groupId>io.vertx</groupId>-->
         <!--<artifactId>vertx-rx</artifactId>-->
