--- a/infrastruktur/src/main/resources/vertx-default-jul-logging.properties
+++ b/infrastruktur/src/main/resources/vertx-default-jul-logging.properties
@@ -9,8 +9,8 @@ java.util.logging.FileHandler.formatter=io.vertx.core.logging.impl.VertxLoggerFo
 java.util.logging.FileHandler.pattern=%t/vertx.log
 
 .level=INFO
-io.vertx.ext.web.level=FINEST
+io.vertx.ext.web.level=INFO
 io.vertx.level=INFO
 com.hazelcast.level=INFO
 io.netty.util.internal.PlatformDependent.level=SEVERE
-com.github.haschi.haushaltsbuch.infrastruktur.level=FINEST
+com.github.haschi.haushaltsbuch.infrastruktur.level=INFO
