--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -16,8 +16,9 @@
         <jackson.version>2.9.2</jackson.version>
         <vmp.version>1.0.9</vmp.version>
         <axon.version>3.1</axon.version>
-        <junit.jupiter.version>5.0.1</junit.jupiter.version>
-        <junit.platform.version>1.0.1</junit.platform.version>
+        <junit.jupiter.version>5.1.0</junit.jupiter.version>
+        <junit.vintage.version>5.1.0</junit.vintage.version>
+        <junit.platform.version>1.1.0</junit.platform.version>
         <junit.version>4.12.1</junit.version>
         <assertj.version>3.8.0</assertj.version>
         <debug.port>8001</debug.port>
@@ -232,8 +233,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.7.0</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                     </configuration>
                 </plugin>
             </plugins>
