--- a/infrastruktur/src/main/resources/simplelogger.properties
+++ b/infrastruktur/src/main/resources/simplelogger.properties
@@ -1,9 +1,9 @@
 # See https://www.slf4j.org/api/org/slf4j/impl/SimpleLogger.html
-org.slf4j.simpleLogger.logFile=System.out
+#org.slf4j.simpleLogger.logFile=System.out
 # Must be one of ("trace", "debug", "info", "warn", "error" or "off"). If not specified, defaults to "info".
-org.slf4j.simpleLogger.defaultLogLevel=info
-org.slf4j.simpleLogger.log.com.github.haschi.haushaltsbuch.infrastruktur.RestApi=info
-org.slf4j.simpleLogger.log.REST=debug
+#org.slf4j.simpleLogger.defaultLogLevel=info
+#org.slf4j.simpleLogger.log.com.github.haschi.haushaltsbuch.infrastruktur.RestApi=info
+#org.slf4j.simpleLogger.log.REST=warn
 # org.slf4j.simpleLogger.showDateTime
 #org.slf4j.simpleLogger.dateTimeFormat
 #org.slf4j.simpleLogger.showThreadName=true
