--- a/testit/pom.xml
+++ b/testit/pom.xml
@@ -13,12 +13,12 @@
     <name>Integrationstests</name>
     <description>Integrationstest für Haushaltsbuch</description>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+    <!--<parent>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter-parent</artifactId>-->
+        <!--<version>2.0.0.RELEASE</version>-->
+        <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+    <!--</parent>-->
 
     <properties>
         <java.version>1.8</java.version>
@@ -28,11 +28,15 @@
         <kotlin.version>1.2.30</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
-        <junit-jupiter.version>5.0.1</junit-jupiter.version>
-        <junit-platform.version>1.0.1</junit-platform.version>
+        <junit-jupiter.version>5.1.0</junit-jupiter.version>
+        <junit-vintage.version>5.1.0</junit-vintage.version>
+        <junit.version>4.12</junit.version>
+        <junit-platform.version>1.1.0</junit-platform.version>
 
         <cukes.version>2.3.1</cukes.version>
         <rest-assured.version>3.0.7</rest-assured.version>
+        <jackson.version>2.9.4</jackson.version>
+        <assertj.version>3.9.1</assertj.version>
     </properties>
 
     <dependencies>
@@ -48,34 +52,34 @@
             <version>${kotlin.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-web</artifactId>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-test</artifactId>-->
+            <!--<scope>test</scope>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<groupId>junit</groupId>-->
+                    <!--<artifactId>junit</artifactId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.8.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.springfox</groupId>-->
+            <!--<artifactId>springfox-swagger2</artifactId>-->
+            <!--<version>2.8.0</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.8.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.springfox</groupId>-->
+            <!--<artifactId>springfox-swagger-ui</artifactId>-->
+            <!--<version>2.8.0</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -103,9 +107,23 @@
         </dependency>
 
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit-vintage.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -148,6 +166,11 @@
             <version>${rest-assured.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>io.cucumber</groupId>-->
             <!--<artifactId>cucumber-expressions</artifactId>-->
@@ -178,8 +201,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.7.0</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                     </configuration>
                 </plugin>
             </plugins>
@@ -233,8 +256,12 @@
                         <cucumber.api.java.ObjectFactory>
                             com.github.haschi.haushaltsbuch.infrastruktur.KomponententestPicoFactory
                         </cucumber.api.java.ObjectFactory>
-                        <logging.level.root>WARN</logging.level.root>
+                        <!--<logging.level.root>WARN</logging.level.root>-->
+                        <logging.level.org.axonframework>WARN</logging.level.org.axonframework>
+                        <debug>false</debug>
+                        <org.slf4j.simpleLogger.defaultLogLevel>info</org.slf4j.simpleLogger.defaultLogLevel>
                     </systemPropertyVariables>
+                    <argLine>-Dlogging.level.root=WARN</argLine>
                 </configuration>
                 <dependencies>
                     <dependency>
