--- a/ui/backend/src/main/resources/application.properties
+++ b/ui/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 debug=false
-logging.level.root=INFO
+logging.level.root=WARN
 spring.main.banner-mode=log
 haushaltsbuch.version=@project.version@
 haushaltsbuch.name=@project.name@
