--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <packaging>pom</packaging>
 
-    <name>${project.artifactId}-${project.version}</name>
+    <name>Haushaltsbuch</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
