--- a/ui/frontend/src/main/package.json
+++ b/ui/frontend/src/main/package.json
@@ -13,35 +13,35 @@
   "private": true,
   "dependencies": {
     "@angular-redux/store": "7.1.0",
-    "@angular/animations": "5.1.2",
-    "@angular/cdk": "5.0.2",
-    "@angular/common": "5.1.2",
-    "@angular/compiler": "5.1.2",
-    "@angular/core": "5.1.2",
-    "@angular/forms": "5.1.2",
-    "@angular/http": "5.1.2",
-    "@angular/material": "5.0.2",
-    "@angular/platform-browser": "5.1.2",
-    "@angular/platform-browser-dynamic": "5.1.2",
-    "@angular/router": "5.1.2",
-    "@covalent/core": "1.0.0-rc.1",
-    "@covalent/dynamic-forms": "1.0.0-rc.1",
-    "@covalent/highlight": "1.0.0-rc.1",
-    "@covalent/http": "1.0.0-rc.1",
-    "@covalent/markdown": "1.0.0-rc.1",
-    "core-js": "2.5.3",
+    "@angular/animations": "5.2.9",
+    "@angular/cdk": "5.2.4",
+    "@angular/common": "5.2.9",
+    "@angular/compiler": "5.2.9",
+    "@angular/core": "5.2.9",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
+    "@angular/material": "5.2.4",
+    "@angular/platform-browser": "5.2.9",
+    "@angular/platform-browser-dynamic": "5.2.9",
+    "@angular/router": "5.2.9",
+    "@covalent/core": "1.0.0",
+    "@covalent/dynamic-forms": "1.0.0",
+    "@covalent/highlight": "1.0.0",
+    "@covalent/http": "1.0.0",
+    "@covalent/markdown": "1.0.0",
+    "core-js": "2.5.5",
     "hammerjs": "^2.0.8",
     "ng2-currency-mask": "^4.4.1",
     "redux": "^3.7.2",
-    "redux-observable": "^0.17.0",
-    "rxjs": "5.5.6",
-    "uuid": "^3.1.0",
-    "zone.js": "0.8.14"
+    "redux-observable": "^0.18.0",
+    "rxjs": "5.5.10",
+    "uuid": "^3.2.1",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.2",
-    "@angular/compiler-cli": "5.1.2",
-    "@angular/language-service": "5.1.2",
+    "@angular/cli": "1.7.4",
+    "@angular/compiler-cli": "5.2.9",
+    "@angular/language-service": "5.2.9",
     "@types/jasmine": "2.8.2",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "8.5.2",
