--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
 jdk:
   - openjdk8
 install: mvn install -DskipTests=true -DskipIT=true -Dmaven.javadoc.skip=true -B -V
-script: mvn test
+script: mvn install -B
