--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -13,16 +13,16 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <jackson.version>2.9.2</jackson.version>
+        <jackson.version>2.9.5</jackson.version>
         <vmp.version>1.0.9</vmp.version>
-        <axon.version>3.2</axon.version>
-        <junit.jupiter.version>5.1.0</junit.jupiter.version>
-        <junit.vintage.version>5.1.0</junit.vintage.version>
-        <junit.platform.version>1.1.0</junit.platform.version>
+        <axon.version>3.2.1</axon.version>
+        <junit.jupiter.version>5.2.0</junit.jupiter.version>
+        <junit.vintage.version>5.2.0</junit.vintage.version>
+        <junit.platform.version>1.2.0</junit.platform.version>
         <junit.version>4.12.1</junit.version>
-        <assertj.version>3.8.0</assertj.version>
+        <assertj.version>3.9.1</assertj.version>
         <debug.port>8001</debug.port>
-        <kotlin.version>1.2.31</kotlin.version>
+        <kotlin.version>1.2.41</kotlin.version>
         <serialization.version>0.2</serialization.version>
     </properties>
 
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit.version}</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>2.4</version>
+            <version>2.4.6</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -229,7 +229,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.21.0</version>
                 <configuration>
                     <systemPropertyVariables>
                         <cucumber.api.java.ObjectFactory>
