--- a/ui/frontend/src/main/package.json
+++ b/ui/frontend/src/main/package.json
@@ -46,14 +46,15 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "8.5.2",
     "codelyzer": "4.0.2",
-    "jasmine-core": "2.8.0",
+    "jasmine": "^3.1.0",
+    "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.0",
+    "karma": "2.0.2",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "2.0.1",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-scss-preprocessor": "^3.0.0",
     "node-sass": "4.7.2",
